--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,15 +7,15 @@
     width: unset;
 }
 
-.header {
+header {
     width: 150px;
 }
 
-.footer {
+footer {
     width: 150px;
 }
 
-.section {
+section {
     width: unset;
     padding-left: 200px;
 }
