--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,6 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
@@ -44,7 +42,7 @@
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}&mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages. Theme by <a href="https://github.com/orderedlist">orderedlist.</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
