--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,3 +20,9 @@ section {
     padding-left: 200px;
     float: unset;
 }
+
+@media print, screen and (min-width: 960px) {
+    section {
+        padding-left: unset;
+    }
+}
