--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,14 +15,10 @@ footer {
     width: 150px;
 }
 
+@media print, screen and (max-width: 960px) {
 section {
     width: unset;
     padding-left: 200px;
     float: unset;
 }
-
-@media print, screen and (min-width: 960px) {
-    section {
-        padding-left: unset;
-    }
 }
